syntax = "proto3";

package record.pb;

import "crypto/pb/crypto.proto";

message SignedEnvelope {
    crypto.pb.PublicKey publicKey = 1;
    bytes payloadType = 2;
    bytes payload = 3;
    uint64 seq = 4;
    bytes signature = 5;
}
